@@ -49,6 +49,8 @@ Fixed:
   Schlatterbeck)
 - issue2550722: avoid errors from selecting "no selection" on
   multilink. (Joseph Myers)
+- issue2550992: avoid errors from invalid Authorization
+  headers. (Joseph Myers)
 
 
 2018-07-13 1.6.0
